# OpenArk

./: CNAME  Cargo.toml  README.md  index.html
assets/: selection_ring.gltf  test_directioned.gltf  test_model.gltf
src/: main.rs
src/control/: freefloat_camera.rs  mod.rs  pickable_movement.rs
src/entities/: operator.rs
src/environment/: mod.rs
src/event/: mod.rs
src/general_components/: battle_stats.rs  counters.rs  effects.rs  mobility.rs  mod.rs  model.rs  status.rs  weapon.rs
src/lib/: direction.rs
src/plugins/: camera.rs  camera_tracker.rs  freefloat_camera.rs  hello_plugin.rs  mod.rs  orbit_cam.rs  pickable_movement.rs  selection_tracker.rs  tick_skill.rs
src/rapier_phy/: mod.rs  phy_movement.rs
src/resources/: effects.rs  mod.rs  selection_tracker.rs  speed_modifier.rs  ticker.rs
src/systems/: camera_tracker.rs  mod.rs  selection_listener.rs  selection_tracker.rs  skill_counter.rs
src/systems/op_skill/: mod.rs  test_skill.rs
